<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">蜜蜂云</string>
    <string name="hello_world">hello_world</string>
    <string name="action_settings">Settings</string>
    <string name="product">产品</string>
    <string name="notification">消息</string>
    <string name="customer">客户</string>
    <string name="find">发现</string>
    <string name="me">我</string>
    <string name="channelManager">渠道管理</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_message_fragment">MessageFragment</string>
    <string name="title_activity_customer_fragment">CustomerFragment</string>
    <string name="title_activity_office_fragmnet">OfficeFragmnet</string>
    <string name="tv_product_others">其他</string>
    <string name="tv_product_po">公募</string>
    <string name="tv_product_pe">私募</string>
    <string name="tv_product_am">资管</string>
    <string name="tv_product_tr">信托</string>
    <string name="trusttroduct">信托产品</string>
    <string name="infoManagementProduct">资管产品</string>
    <string name="privateProduct">私募产品</string>
    <string name="publicProduct">所有</string>
    <string name="otherProduct">其他产品</string>
    <string name="product_introduce">产品介绍</string>
    <string name="expected_annual_yield">预期收益率</string>
    <string name="investment_horizon">投资期限</string>
    <string name="amount">起投金额</string>
    <string name="order">预约</string>
    <string name="rebate_proportion">返佣比例</string>
    <string name="title_activity_list_product">ProductListActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="tv_product">产品</string>
    <string name="tv_customer">客户</string>
    <string name="tv_number">身份证号</string>
    <string name="tv_subscription_amount">认购金额</string>
    <string name="submitbooking">提交预约</string>
    <string name="certified_amount">已认证金额</string>
    <string name="no_subscription_amount">"未认购金额 "</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="lucky_draw">抽奖</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="make_payment">打款金额</string>
    <string name="contract_signature_page">合同签字页</string>
    <string name="submit_report">提交报单</string>
    <string name="form">报单</string>
    <string name="identity_authentication">身份认证</string>
    <string name="detail">详情</string>
    <string name="new_self_custom">新建个人客户</string>
    <string name="update_self_custom">修改个人客户</string>
    <string name="update_organization">修改机构客户</string>
    <string name="new_organization">新建机构客户</string>
    <string name="new_channel_organization">新建机构渠道</string>
    <string name="update_channel_organization">修改机构渠道</string>
    <string name="new_channel_individual">新建有客渠道</string>
    
    <string name="update_channel_individual">修改机构渠道</string>
    <string name="edite">编辑</string>
    <string name="addcontract">添加合同</string>
    <string name="province">省</string>
    <string name="please_choice">请选择</string>
    <string name="identity_card">身份证正面</string>
    <string name="receipt">打款凭条</string>
    <string name="bank_card">银行卡</string>
    <string name="for_contract">申请合同</string>
    <string name="distribution_plan">发行方案</string>
    <string name="add_finance_history">新增理财历史</string>
    <string name="remind">提醒</string>
    <string name="title_activity_for_contract">ForContractActivity</string>
    <string name="email_address">收件地址</string>
    <string name="manager_email_address">管理收件地址</string>
    <string name="tv_new">新建</string>
    <string name="new_address">新建地址</string>
    <string name="modify_address">编辑收件地址</string>
    <string name="delete">删除</string>
    <string name="title_activity_new_address">NewAddressActivity</string>
    <string name="title_register">注册</string>
    <string name="title_next">下一步</string>
    <string name="title_perfect_info">完善资料</string>
    <string name="title_skip">跳过</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registerOne">RegisterOneActivity</string>
    <string name="title_activity_registerTwo">RegisterTwoActivity</string>
    <string name="addressee">收件人</string>
    <string name="mobile_phone">手机</string>
    <string name="address">地址</string>
    <string name="area">地区</string>
    <string name="mail">邮件</string>
    <string name="zip">邮编</string>
    <string name="email">邮箱</string>
    <string name="tv_default">默认地址</string>
    <string name="save">保存</string>
    <string name="administration">管理</string>
    <string name="title_activity_receive_address">ReceiveAddressActivity</string>
    <string name="title_activity_obtain_information">ObtainInformationActivity</string>
    <string name="obtain_information">获取资料</string>
    <string name="highest_commission">返佣最高</string>
    <string name="begin">即将开始</string>
    <string name="sale">即将开售</string>
    <string name="net_fund">基金净值</string>
    <string name="invest">投向</string>
    <string name="annual_yield">年化收益</string>
    <string name="title_activity_manager_receive_address">ManagerReceiveAddressActivity</string>
    <string name="your_name">你的姓名</string>
    <string name="reservation_amount">预约金额</string>
    <string name="title_activity_search_one">SearchOneActivity</string>
    <string name="head_title_register_right">取消</string>
    <string name="search_history">搜索历史</string>
    <string name="products">理财产品</string>
    <string name="btn_ok">确定</string>
    <string name="title_activity_add_contract">AddContractActivity</string>
    <string name="contract_name">合同名称</string>
    <string name="contract_amount">合同金额</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="title_activity_register_three">RegisterThreeActivity</string>
    <string name="name">姓名</string>
    <string name="title_activity_certification">CertificationActivity</string>
    <string name="tv_continue">继续</string>
    <string name="tv_certification">认证</string>
    <string name="title_activity_certification_two">CertificationTwoActivity</string>
    <string name="company">公司</string>
    <string name="identity_card_photo">身份证照片</string>
    <string name="headshot">大头照</string>
    <string name="title_activity_create_company">CreateCompanyActivity</string>
    <string name="company_name">公司名称</string>
    <string name="company_size">公司规模</string>
    <string name="submit">提交</string>
    <string name="error">报错</string>
    <string name="affiliated_person">关联人</string>
    <string name="new_affiliated">新建关联人</string>
    <string name="update_affiliated">修改关联人</string>
    <string name="create_company">创建新公司</string>
    <string name="title_activity_certification_cp_info">CertificationCpInfoActivity</string>
    <string name="certification_cp_info">认证公司信息</string>
    <string name="submit_certification">提交认证</string>
    <string name="organization_code">机构代码</string>
    <string name="company_address">公司地址</string>
    <string name="phone_company">公司电话</string>
    <string name="phone">电话</string>
    <string name="corporate_charter">公司执照</string>
    <string name="legal_person_id_card">法人身份证</string>
    <string name="title_activity_select_customer">SelectCustomerActivity</string>
    <string name="institutions_category">机构类别：</string>
    <string name="title_activity_select_customer_search">SelectCustomerSearchActivity</string>
    <string name="title_activity_clues">CluesActivity</string>
    <string name="clues">线索</string>
    <string name="individual_customers">个人客户</string>
    <string name="organization_customers">机构客户</string>
    <string name="individual_channel">有客收单渠道</string>
    <string name="organization_channel">机构收单渠道</string>
    <string name="title_activity_clues_two">CluesTwoActivity</string>
    <string name="title_activity_an_error">AnErrorActivity</string>
    <string name="title_activity_select_customer_two">SelectCustomerTwoActivity</string>
    <string name="title_activity_individual_customers">IndividualCustomersActivity</string>
    <string name="title_activity_affiliated_person">AffiliatedPersonActivity</string>
    <string name="title_activity_new_associates">NewAssociatesActivity</string>
    <string name="relation">关系</string>
    <string name="note">备注</string>
    <string name="title_activity_remind">RemindActivity</string>
    <string name="title_activity_new_remind">NewRemindActivity</string>
    <string name="title_activity_label">LabelActivity</string>
    <string name="title_activity_dailog_bottom">DailogBottom</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_new_individual_customers">NewIndividualCustomersActivity</string>
    <string name="contact">联系人：</string>
    <string name="title_activity_new_clues">NewCluesActivity</string>
    <string name="new_clue">新建线索</string>
    <string name="title_activity_select_phone">SelectPhoneActivity</string>
    <string name="title_activity_addfinance_history">AddfinanceHistoryActivity</string>
    <string name="title_activity_order_or_form">客户预约报单</string>
    <string name="title_activity_form_detail">报单详情</string>
    <string name="title_activity_renew_contract">续存合同</string>
    <string name="title_activity_contract_detail">合同详情</string>
    <string name="title_activity_transaction_record">交易记录</string>
    <string name="title_label">标签</string>
    <string name="title_activity_user_info_fragment">UserInfoFragment</string>
    <string name="title_activity_all_clue_fragment">全部线索</string>
    <string name="title_activity_key_clue_fragment">重点线索</string>
    <string name="title_activity_general_clue_fragment">一般线索</string>
    <string name="title_activity_channels_manager">ChannelsManagerActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="settings">设置</string>
    <string name="aboutcaifuyun">关于蜜蜂云</string>
    <string name="feedback">意见反馈</string>
    <string name="integral_mall">积分商城</string>
    <string name="integral_details">商品详情</string>
    
    <string name="regulations">蜜蜂云运营管理办法</string>

    <!-- 销售日报 -->
    <string name="title_activity_sales_journal">SalesJournalActivity</string>
    <string name="sales_journal">销售日报</string>
    <string name="title_activity_sales_journal_unread">UnReadActivity</string>
    <string name="unread">未批阅</string>
    <string name="title_activity_sales_journal_read">ReadActivity</string>
    <string name="read">已批阅</string>
    <string name="write">写日报</string>
    <string name="savedraft">存草稿</string>
    <string name="edit">编辑</string>

    <!-- 消息 -->
    <string name="contacts">通讯录</string>
    <string name="personalcontacts">个人通讯录</string>
     <string name="companycontacts">公司通讯录</string>
    <string name="notice">通知</string>
    <string name="message_details">详细资料</string>
    <string name="title_activity_lucky_draw">LuckyDrawActivity</string>
     <string name="mygroup">我的群组</string>
    <string name="group_notice">群公告</string>
    <string name="group_file">群文件</string> 
    
    <string name="order_or_form">预约待报单</string> 
    <string name="form_verifying">报单审核中</string>
    <string name="form_finish">已成功</string> 
    <string name="find_web">发现世界</string>
     <string name="vip_manager">会员管理</string>
<string name="tv_dialog_title_logout">确定退出当前登录账号吗?</string>

    
    <string name="title_activity_conversation">ConversationActivity</string>
</resources>